Bug 52052 - FILEOPEN: Imported RTF file is incorrect, table in document is corrupt
Summary: FILEOPEN: Imported RTF file is incorrect, table in document is corrupt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.6.2 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-07-13 13:41 UTC by Andrey Gankov
Modified: 2015-12-17 12:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
problem document Rtf (97.18 KB, application/rtf)
2012-07-13 13:41 UTC, Andrey Gankov
Details
Office 2003 (140.31 KB, image/png)
2012-07-13 13:42 UTC, Andrey Gankov
Details
LO 3.6 (116.97 KB, image/png)
2012-07-13 13:43 UTC, Andrey Gankov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Gankov 2012-07-13 13:41:49 UTC
Created attachment 64173 [details]
problem document Rtf

Attached RTF document open incorrect. Table in document is corrupted.
See screen shot of this document in Office 2003.
And see screen shot in LibreOffice 3.6 beta2

In LibleOffice 3.5 it is incorrect too.
Comment 1 Andrey Gankov 2012-07-13 13:42:49 UTC
Created attachment 64174 [details]
Office 2003
Comment 2 Andrey Gankov 2012-07-13 13:43:28 UTC
Created attachment 64175 [details]
LO 3.6
Comment 3 Roman Eisele 2012-08-23 12:03:26 UTC
Thank you very much for your bug report!

REPRODUCIBLE with
* LibreOffice 3.5.6.2 (Build ID: e0fbe70-dcba98b-297ab39-994e618-0f858f0)
* LibreOffice 3.6.1.1 (Build ID: 4db6344)
* LOdev 3.7.0.0.alpha0+ (Build ID: 9e04ae0; build date: 2012-08-21)

The results are all like on Andrey Gankov’s screenshot (attachment 64175 [details]).

However, the problem is NOT reproducible with
* LibreOffice 3.3.0
* LibreOffice 3.4.6
both versions open the RTF file more or less correctly, i.e. the table looks like in MS Office. I can attach a screenshot if necessary.

Therefore added keyword "regression".


@Miklós:
Hello Miklós, this is probably a duplicate of one or more of the existing bug reports about problems with tables in RTF import, but I can’t tell for sure without insight into the internals of RTF table handling (which I don’t have). Therefore I leave this bug report as NEW and ask you kindly to take a look at it.

Thank you very much!
Comment 4 Roman Eisele 2012-08-23 12:05:19 UTC
(In reply to comment #3)
> REPRODUCIBLE with
> * LibreOffice 3.5.6.2 (Build ID: e0fbe70-dcba98b-297ab39-994e618-0f858f0)
> * LibreOffice 3.6.1.1 (Build ID: 4db6344)
> * LOdev 3.7.0.0.alpha0+ (Build ID: 9e04ae0; build date: 2012-08-21)

Oops, I forgot to mention: all my tests done on MacOS X 10.6.8 (Intel); therefore I also changed the Platform to "All", because the problem is not specific to Windows.
Comment 5 Korrawit Pruegsanusak 2012-08-25 10:31:17 UTC
(In reply to comment #3)
> REPRODUCIBLE with
> * LibreOffice 3.5.6.2 (Build ID: e0fbe70-dcba98b-297ab39-994e618-0f858f0)

Set version to this one.
Comment 6 Miklos Vajna 2012-08-27 14:46:43 UTC
This is yet another doc from Crystal Report, which abuses textframes to create an RTF table that can't be edited anymore. ;-)

Anyway sure, 3.4 produced an acceptable result, so I'll have a look at this.
Comment 7 Not Assigned 2012-08-28 10:00:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1efa576ef88141c4deb5da9818537e053dc6517b

fdo#52052 fix RTF import of page breaks on landscape pages
Comment 8 Miklos Vajna 2012-08-28 10:22:04 UTC
Resolved in master, -3-6 cherry-pick request:

https://gerrit.libreoffice.org/497
Comment 9 Not Assigned 2012-08-29 20:26:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c32e8758a2244174a533e045ff9e8113581ee7d&g=libreoffice-3-6

fdo#52052 fix RTF import of page breaks on landscape pages


It will be available in LibreOffice 3.6.2.
Comment 10 Robinson Tryon (qubit) 2015-12-17 12:07:02 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]