fdo#52052 fix RTF import of page breaks on landscape pages

The problem was that we tried to insert a page break before reaching the
first section break, where section properties are sent.

Additionally, the continuous section break at the end of the doc caused
trouble, so ignore it explicitly.

Change-Id: I22bc355994991beeadb41d26b44ce3e2beedbdb2