writerfilter/source/rtftok/rtfdocumentimpl.hxx
@@ -479,6 +479,8 @@ namespace writerfilter {
                 void replayBuffer(RTFBuffer_t& rBuffer);
                 /// If we have some unicode or hex characters to send.
                 void checkUnicode(bool bUnicode = true, bool bHex = true);
+                /// If we have a pending continous section break.
+                void checkDeferredContSectBreak();
 
                 uno::Reference<uno::XComponentContext> const& m_xContext;
                 uno::Reference<io::XInputStream> const& m_xInputStream;
@@ -573,6 +575,7 @@ namespace writerfilter {
                 rtl::OStringBuffer m_aHexBuffer;
                 /// Formula import.
                 oox::formulaimport::XmlStreamBuilder m_aMathBuffer;
+                bool m_bDeferredContSectBreak;
         };
     } // namespace rtftok
 } // namespace writerfilter
